--- a/text_generation.ipynb
+++ b/text_generation.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyPM5s+S23M/f0xhbbIyL1ga",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,11 +19,30 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/rockingboi/task-ai/blob/main/text_generation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Step 1: Install Dependencies\n",
-        "!pip install transformers datasets torch\n",
-        "\n",
+        "!pip install transformers datasets torch"
+      ],
+      "metadata": {
+        "id": "8xdB-7DR5_Vu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Step 2: Load a Small Pre-installed Dataset (Wikitext-2)\n",
         "from datasets import load_dataset\n",
         "\n",
@@ -80,27 +101,48 @@
         "\n",
         "print(\"\\nTraining Complete!\")\n",
         "\n",
-        "# Step 6: Generate Text Based on User Input (Interactive Mode)\n",
-        "model.eval()\n",
+        "# Step 6: Generate Text in a Continuous Loop Until User Stops\n",
+        "model.eval()  # Set the model to evaluation mode\n",
         "\n",
-        "# Prompt the user to enter a text prompt\n",
-        "user_prompt = input(\"Enter a prompt to generate text: \")\n",
+        "print(\"\\nType 'exit' or 'quit' to stop the text generation loop.\")\n",
         "\n",
-        "# Tokenize the user input prompt\n",
-        "input_ids = tokenizer(user_prompt, return_tensors=\"pt\").input_ids.to(device)\n",
+        "# Store the last user prompt for regeneration\n",
+        "last_prompt = None\n",
         "\n",
-        "# Generate text using the fine-tuned model\n",
-        "output = model.generate(\n",
-        "    input_ids,\n",
-        "    max_length=100,  # Generate up to 100 tokens\n",
-        "    num_return_sequences=1,\n",
-        "    no_repeat_ngram_size=2,  # Avoid repetition\n",
-        "    early_stopping=True\n",
-        ")\n",
+        "while True:\n",
+        "    # Prompt the user for input or use the last prompt for regeneration\n",
+        "    if last_prompt:\n",
+        "        regenerate = input(\"Type 'regenerate' to generate again, or press Enter to enter a new prompt: \").strip().lower()\n",
+        "        if regenerate == \"regenerate\":\n",
+        "            user_prompt = last_prompt\n",
+        "        else:\n",
+        "            user_prompt = input(\"Enter a prompt to generate text: \")\n",
+        "            if user_prompt.lower() in [\"exit\", \"quit\"]:\n",
+        "                print(\"Exiting the text generation loop. Goodbye!\")\n",
+        "                break\n",
+        "            last_prompt = user_prompt  # Store the prompt for future regeneration\n",
+        "    else:\n",
+        "        user_prompt = input(\"Enter a prompt to generate text: \")\n",
+        "        if user_prompt.lower() in [\"exit\", \"quit\"]:\n",
+        "            print(\"Exiting the text generation loop. Goodbye!\")\n",
+        "            break\n",
+        "        last_prompt = user_prompt  # Store the prompt for future regeneration\n",
         "\n",
-        "# Decode and display the generated text\n",
-        "generated_text = tokenizer.decode(output[0], skip_special_tokens=True)\n",
-        "print(f\"\\nGenerated Text:\\n{generated_text}\")\n",
+        "    # Tokenize the user input prompt\n",
+        "    input_ids = tokenizer(user_prompt, return_tensors=\"pt\").input_ids.to(device)\n",
+        "\n",
+        "    # Generate text using the fine-tuned model\n",
+        "    output = model.generate(\n",
+        "        input_ids,\n",
+        "        max_length=100,  # Generate up to 100 tokens\n",
+        "        num_return_sequences=1,\n",
+        "        no_repeat_ngram_size=2,  # Avoid repetition\n",
+        "        early_stopping=True\n",
+        "    )\n",
+        "\n",
+        "    # Decode and display the generated text\n",
+        "    generated_text = tokenizer.decode(output[0], skip_special_tokens=True)\n",
+        "    print(f\"\\nGenerated Text:\\n{generated_text}\\n\")\n",
         "\n",
         "# Step 7: Save the Fine-tuned Model (Optional)\n",
         "model.save_pretrained(\"./fine_tuned_gpt2\")\n",
@@ -112,57 +154,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "EJ1t1I6Z61Ha",
-        "outputId": "686b89d9-083f-447f-fa8f-2f50eabb3f25"
+        "id": "tJac1Jm849G7",
+        "outputId": "d9f8cafb-488b-4480-85f0-c95ff6c7a308"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: transformers in /usr/local/lib/python3.10/dist-packages (4.45.2)\n",
-            "Requirement already satisfied: datasets in /usr/local/lib/python3.10/dist-packages (3.0.1)\n",
-            "Requirement already satisfied: torch in /usr/local/lib/python3.10/dist-packages (2.4.1+cu121)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from transformers) (3.16.1)\n",
-            "Requirement already satisfied: huggingface-hub<1.0,>=0.23.2 in /usr/local/lib/python3.10/dist-packages (from transformers) (0.24.7)\n",
-            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.10/dist-packages (from transformers) (1.26.4)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from transformers) (24.1)\n",
-            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.10/dist-packages (from transformers) (6.0.2)\n",
-            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.10/dist-packages (from transformers) (2024.9.11)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from transformers) (2.32.3)\n",
-            "Requirement already satisfied: safetensors>=0.4.1 in /usr/local/lib/python3.10/dist-packages (from transformers) (0.4.5)\n",
-            "Requirement already satisfied: tokenizers<0.21,>=0.20 in /usr/local/lib/python3.10/dist-packages (from transformers) (0.20.1)\n",
-            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.10/dist-packages (from transformers) (4.66.5)\n",
-            "Requirement already satisfied: pyarrow>=15.0.0 in /usr/local/lib/python3.10/dist-packages (from datasets) (16.1.0)\n",
-            "Requirement already satisfied: dill<0.3.9,>=0.3.0 in /usr/local/lib/python3.10/dist-packages (from datasets) (0.3.8)\n",
-            "Requirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (from datasets) (2.2.2)\n",
-            "Requirement already satisfied: xxhash in /usr/local/lib/python3.10/dist-packages (from datasets) (3.5.0)\n",
-            "Requirement already satisfied: multiprocess in /usr/local/lib/python3.10/dist-packages (from datasets) (0.70.16)\n",
-            "Requirement already satisfied: fsspec<=2024.6.1,>=2023.1.0 in /usr/local/lib/python3.10/dist-packages (from fsspec[http]<=2024.6.1,>=2023.1.0->datasets) (2024.6.1)\n",
-            "Requirement already satisfied: aiohttp in /usr/local/lib/python3.10/dist-packages (from datasets) (3.10.10)\n",
-            "Requirement already satisfied: typing-extensions>=4.8.0 in /usr/local/lib/python3.10/dist-packages (from torch) (4.12.2)\n",
-            "Requirement already satisfied: sympy in /usr/local/lib/python3.10/dist-packages (from torch) (1.13.3)\n",
-            "Requirement already satisfied: networkx in /usr/local/lib/python3.10/dist-packages (from torch) (3.4.1)\n",
-            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.10/dist-packages (from torch) (3.1.4)\n",
-            "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (2.4.3)\n",
-            "Requirement already satisfied: aiosignal>=1.1.2 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (1.3.1)\n",
-            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (24.2.0)\n",
-            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (1.4.1)\n",
-            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (6.1.0)\n",
-            "Requirement already satisfied: yarl<2.0,>=1.12.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (1.15.2)\n",
-            "Requirement already satisfied: async-timeout<5.0,>=4.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (4.0.3)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (3.4.0)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (3.10)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (2.2.3)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (2024.8.30)\n",
-            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2->torch) (3.0.1)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.10/dist-packages (from pandas->datasets) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas->datasets) (2024.2)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.10/dist-packages (from pandas->datasets) (2024.2)\n",
-            "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.10/dist-packages (from sympy->torch) (1.3.0)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.2->pandas->datasets) (1.16.0)\n",
-            "Requirement already satisfied: propcache>=0.2.0 in /usr/local/lib/python3.10/dist-packages (from yarl<2.0,>=1.12.0->aiohttp->datasets) (0.2.0)\n",
             "Sample Data:\n",
             "\n",
             " = Valkyria Chronicles III = \n",
@@ -222,22 +222,43 @@
             "           355,  8739,   326,   460,   307, 12748, 28660,   832,   290,   302,\n",
             "         21542,   355,   484,   389, 14838,   764,   383,  6339,   284,  1123,\n",
             "          1621,  4067]])\n",
-            "Epoch 1 | Loss: 3.703620433807373\n",
-            "Epoch 2 | Loss: 3.4409642219543457\n",
-            "Epoch 3 | Loss: 3.1615471839904785\n",
+            "Epoch 1 | Loss: 3.7088868618011475\n",
+            "Epoch 2 | Loss: 3.461548328399658\n",
+            "Epoch 3 | Loss: 3.179793119430542\n",
             "\n",
             "Training Complete!\n",
-            "Enter a prompt to generate text: police\n"
+            "\n",
+            "Type 'exit' or 'quit' to stop the text generation loop.\n",
+            "Enter a prompt to generate text: hello\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.10/dist-packages/transformers/generation/configuration_utils.py:649: UserWarning: `num_beams` is set to 1. However, `early_stopping` is set to `True` -- this flag is only used in beam-based generation modes. You should set `num_beams>1` or unset `early_stopping`.\n",
-            "  warnings.warn(\n",
             "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
-            "Setting `pad_token_id` to `eos_token_id`:None for open-end generation.\n"
+            "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Generated Text:\n",
+            "hello, NY) – The New York Red Bulls have signed midfielder Jordan Morris to a one-year contract, the club announced today.\n",
+            "\n",
+            "Morris, 23, joins the Red Bull Arena as a member of the New England Revolution's academy. He joins a group of players who have been with the team since the beginning of last season, including midfielder Christian Pulisic, midfielder David Villa, defender Michael Bradley, and midfielder Michael Orozco. Morris, who has played in all 16 MLS\n",
+            "\n",
+            "Type 'regenerate' to generate again, or press Enter to enter a new prompt: regenerate\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+            "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
           ]
         },
         {
@@ -246,11 +267,10 @@
           "text": [
             "\n",
             "Generated Text:\n",
-            "police, and the police department's own internal affairs unit.\n",
+            "hello, NY) – The New York Red Bulls have signed midfielder Jordan Morris to a one-year contract, the club announced today.\n",
             "\n",
-            "The investigation into the shooting began in January, when a man who had been shot in the head was found dead in his car. The man's family said he had suffered a gunshot wound to the chest and was taken to a hospital. Police said the man had a history of mental illness and had recently been diagnosed with schizophrenia.\n",
-            "\n",
-            "Model and tokenizer saved to './fine_tuned_gpt2'\n"
+            "Morris, 23, joins the Red Bull Arena as a member of the New England Revolution's academy. He joins a group of players who have been with the team since the beginning of last season, including midfielder Christian Pulisic, midfielder David Villa, defender Michael Bradley, and midfielder Michael Orozco. Morris, who has played in all 16 MLS\n",
+            "\n"
           ]
         }
       ]
